services/explorer-ui-v2/k8s/overlays/testnet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: explorer-ui-v2
  namespace: chicmoz-prod
  labels:
    app.kubernetes.io/name: explorer-ui-v2
    app.kubernetes.io/part-of: chicmoz-prod
spec:
  parentRefs:
    - name: aztecscan-gateway
      sectionName: ui-testnet-primary-http
    - name: aztecscan-gateway
      sectionName: ui-testnet-primary-https
  hostnames:
    - testnet.aztecscan.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: explorer-ui-v2-testnet
          port: 80
